# create-meson-app

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
create_meson_app/: __init__.py  cli.py  create_meson_app.py
create_meson_app/meson_templates/: __init__.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_create_meson_app.py
