[tool.poetry]
name = "create-meson-app"
version = "0.1.0"
description = "A lovelyy command line program that lets you get straight into programming a Meson/Glib-baseproject"
authors = ["Nefo Fortressia <nefothingy@hotmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
inquirer = "^2.9.2"
click = "^8.1.3"
PyGObject = "^3.42.1"
PyGObject-stubs = "^0.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
